--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "react-window": "^1.8.8",
+    "react-zoom-pan-pinch": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
